// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`both buttons are present if the page is between 2 valid element in the menu 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-prev"
        href="/Nacara//docs/getting-started/page1/"
    >
        <i>←</i>
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 1</strong>
        </span>
    </a>
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-next"
        href="/Nacara//docs/getting-started/page3/"
    >
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 3</strong>
        </span>
        <i>→</i>
    </a>
</div>
"
`;

exports[`returns nothing if there is not nacaraMenu provided 1`] = `""`;

exports[`returns the Next button marked as invisible and the first button normal if this is the last page 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-prev"
        href="/Nacara//docs/getting-started/page1/"
    >
        <i>←</i>
        <span class="is-hidden-mobile">
            <em></em>
            <strong>Page 1</strong>
        </span>
    </a>
    <a class="button navigate-to-next is-invisible"></a>
</div>
"
`;

exports[`returns the Previous button marked as invisible and the second button normal if this is the first page 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a class="button navigate-to-previous is-invisible"></a>
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-next"
        href="/Nacara//docs/getting-started/page2/"
    >
        <span class="is-hidden-mobile">
            <em></em>
            <strong>Page 2</strong>
        </span>
        <i>→</i>
    </a>
</div>
"
`;

exports[`the Next button include the section title page is inside a section 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-prev"
        href="/Nacara//docs/getting-started/page1/"
    >
        <i>←</i>
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 1</strong>
        </span>
    </a>
    <a class="button navigate-to-next is-invisible"></a>
</div>
"
`;

exports[`the Next button is empty if the next menu element is a link 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-prev"
        href="/Nacara//docs/getting-started/page1/"
    >
        <i>←</i>
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 1</strong>
        </span>
    </a>
    <a class="button navigate-to-next is-invisible"></a>
</div>
"
`;

exports[`the Previous button include the section title page is inside a section 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a class="button navigate-to-previous is-invisible"></a>
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-next"
        href="/Nacara//docs/getting-started/page2/"
    >
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 2</strong>
        </span>
        <i>→</i>
    </a>
</div>
"
`;

exports[`the Previous button is empty if the previous menu element is a link 1`] = `
"<div class="section bd-docs-pagination bd-pagination-links">
    <a class="button navigate-to-previous is-invisible"></a>
    <a
        class="button bd-fat-button is-primary is-light bd-pagination-next"
        href="/Nacara//docs/getting-started/page3/"
    >
        <span class="is-hidden-mobile">
            <em>Getting Started</em>
            <strong>Page 3</strong>
        </span>
        <i>→</i>
    </a>
</div>
"
`;
